# apca

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: .codecov.yml  dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
examples/: latest-quote-and-trade.rs  order.rs  stream-realtime-data.rs
src/: api_info.rs  client.rs  endpoint.rs  env.rs  error.rs  lib.rs  macros.rs  requestor.rs  subscribable.rs  time_util.rs  trace.rs  util.rs  websocket.rs
src/api/: mod.rs  time_util.rs
src/api/v1/: account.rs  asset.rs  assets.rs  clock.rs  events.rs  mod.rs  order.rs  order_util.rs  orders.rs  position.rs  positions.rs
src/api/v2/: account.rs  account_activities.rs  account_config.rs  account_portfolio.rs  asset.rs  assets.rs  calendar.rs  clock.rs  de.rs  events.rs  mod.rs  order.rs  order_util.rs  orders.rs  position.rs  positions.rs  updates.rs  util.rs  watchlist.rs  watchlists.rs
src/data/: mod.rs
src/data/v1/: bars.rs  mod.rs  news.rs
src/data/v2/: bars.rs  feed.rs  last_quote.rs  last_quotes.rs  last_trade.rs  mod.rs  quotes.rs  stocks.rs  stream.rs  trades.rs  unfold.rs
src/events/: handshake.rs  mod.rs  stream.rs
