[package]
name = "apca"
version = "0.29.0"
edition = "2021"
rust-version = "1.63"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apca"
repository = "https://github.com/d-e-s-o/apca.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks"]
description = """
A crate for interacting with the Alpaca API.
"""
include = ["src/**/*", "LICENSE", "README.*", "CHANGELOG.*"]

[features]
default = ["gzip"]
gzip = ["async-compression/futures-io", "async-compression/gzip"]
vendored-openssl = ["hyper-tls/vendored", "tungstenite/native-tls-vendored"]

[dependencies]
async-compression = {version = "0.4", default-features = false, optional = true}
async-trait = "0.1.51"
chrono = {version = "0.4.19", features = ["serde"]}
futures = {version = "0.3", default-features = false}
http = {version = "1.1", default-features = false}
http-endpoint = "0.5"
hyper = {version = "0.14", features = ["client", "http1", "stream"]}
hyper-tls = {version = "0.5", default-features = false}
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
serde = {version = "1.0.103", features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["std"]}
serde_urlencoded = {version = "0.7", default-features = false}
serde_variant = {version = "0.1", default-features = false}
thiserror = "1.0.30"
tokio = {version = "1.13", default-features = false, features = ["net"]}
tracing = {version = "0.1", default-features = false, features = ["attributes", "std"]}
tracing-futures = {version = "0.2", default-features = false, features = ["std-future"]}
tungstenite = {package = "tokio-tungstenite", version = "0.20", features = ["connect", "native-tls"]}
url = "2.0"
uuid = {version = "1.0", default-features = false, features = ["serde"]}
websocket-util = "0.12.0"

[dev-dependencies]
serial_test = {version = "3.0.0", default-features = false}
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
tokio = {version = "1.13", default-features = false, features = ["rt-multi-thread", "macros"]}
uuid = {version = "1.0", default-features = false, features = ["v4"]}
websocket-util = {version = "0.12.0", features = ["test"]}

# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
# error[E0277]: the trait bound `Version: From<({integer}, {integer}, {integer})>` is not satisfied
_rustc_version_unused = { package = "rustc_version", version = "0.2.2" }
# error[E0308]: mismatched types
_num_bigint_unused = { package = "num-bigint", version = "0.4.2" }
# error[E0635]: unknown feature `proc_macro_span_shrink`
_proc_macro2_unused = { package = "proc-macro2", version = "1.0.60" }
# error: pasting "RUST_VERSION_OPENSSL_" and "(" does not give a valid preprocessing token
_openssl_unused = {package = "openssl", version = "0.10.35"}
# error[E0599]: `Body` is not an iterator
_http_body_unused = {package = "http-body", version = "0.4.6"}
